# personal-bill-uploader

./: .env.example  .gitignore  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/share/: route.ts
components/bill-uploader/: AppShell.tsx  BillUploaderApp.tsx  BottomNav.tsx  ConfirmDialog.tsx  Header.tsx  ServiceWorkerRegistration.tsx  Toast.tsx  UploadOverlay.tsx
components/bill-uploader/dashboard/: BillDetailSheet.tsx  BillsList.tsx  CategorySpendList.tsx  (+8 more)
db/migrations/: 001_initial.sql  002_expense_line_items.sql  003_bill_review_status.sql  004_expense_source.sql
docs/: google-drive-setup.md  processor-setup.md  supabase-setup.md
hooks/: useToast.ts
lib/auth/: password.ts  request.ts  session.ts
lib/bill-uploader/: constants.ts  driveUpload.ts  mockUpload.ts  sharePayload.ts  smsUpload.ts  types.ts  utils.ts
lib/bills/: repository.ts
lib/dashboard/: aggregate.ts  date.ts  day.ts  format.ts  repository.ts  types.ts
lib/db/: postgres.ts
lib/google-drive/: client.ts  uploadText.ts
lib/supabase/: server.ts  types.ts
processor/: Makefile  README.md  pyproject.toml
processor/bill_processor/: __init__.py  __main__.py  config.py  pipeline.py
processor/bill_processor/db/: __init__.py  client.py
processor/bill_processor/drive/: __init__.py  client.py
processor/bill_processor/extractor/: __init__.py  image.py  pdf.py  router.py  types.py
processor/bill_processor/llm/: __init__.py  client.py  prompts.py  runner.py
public/: manifest.webmanifest  sw.js
scripts/: get-google-refresh-token.mjs
(+21 files in other folders)
