[project]
name = "bill-processor"
version = "0.1.0"
description = "Local daily job: sync Drive bills, extract via Ollama, write to Supabase"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pypdf>=6.0",
    "pymupdf>=1.24",
    "psycopg[binary]>=3.2",
    "Pillow>=10.0",
]

[project.scripts]
bill-processor = "bill_processor.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bill_processor*"]
